--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <script src=<%= htmlWebpackPlugin.options.path %>/jquery.min.js></script>
-<script src=<%= htmlWebpackPlugin.options.path %>/tinymce/tinymce.min.js></script>
+<script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
